CMAKE_MINIMUM_REQUIRED(VERSION 3.13.4)
PROJECT(heLLoVM LANGUAGES C CXX)
SET(CMAKE_C_STANDARD 99)
SET(CMAKE_CXX_STANDARD 14)

FIND_PACKAGE(LLVM REQUIRED CONFIG
  PATHS "/usr/lib/llvm-9/cmake" "/usr/lib/llvm-13/cmake"
  NO_DEFAULT_PATH)

MESSAGE(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
MESSAGE(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")

SEPARATE_ARGUMENTS(LLVM_DEFINITIONS_LIST NATIVE_COMMAND ${LLVM_DEFINITIONS})
ADD_DEFINITIONS(${LLVM_DEFINITIONS})

ADD_EXECUTABLE(hellovm llo.cc)
ADD_EXECUTABLE(hellovmc llo.c)

INCLUDE_DIRECTORIES(hellovm ${LLVM_INCLUDE_DIRS})

TARGET_LINK_DIRECTORIES(hellovm INTERFACE ${LLVM_LIBRARY_DIRS})
TARGET_LINK_DIRECTORIES(hellovmc INTERFACE ${LLVM_LIBRARY_DIRS})

TARGET_LINK_LIBRARIES(hellovm -lLLVM-${LLVM_VERSION_MAJOR})
TARGET_LINK_LIBRARIES(hellovmc -lLLVM-${LLVM_VERSION_MAJOR})
