CMAKE_MINIMUM_REQUIRED(VERSION 3.13.4)
PROJECT(heLLoVM LANGUAGES C CXX)
SET(CMAKE_C_STANDARD 99)
SET(CMAKE_CXX_STANDARD 14)

FIND_PACKAGE(LLVM REQUIRED CONFIG
  PATHS
  "/usr/lib/llvm-15/cmake"
  "/usr/lib/llvm-14/cmake"
  "/usr/lib/llvm-13/cmake"
  "/usr/lib/llvm-12/cmake"
  "/usr/lib/llvm-11/cmake"
  "/usr/lib/llvm-10/cmake"
  "/usr/lib/llvm-9/cmake")

MESSAGE(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
MESSAGE(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")

SEPARATE_ARGUMENTS(LLVM_DEFINITIONS_LIST NATIVE_COMMAND ${LLVM_DEFINITIONS})
ADD_DEFINITIONS(${LLVM_DEFINITIONS})

INCLUDE_DIRECTORIES(${LLVM_INCLUDE_DIRS})

ADD_EXECUTABLE(hellovm llo.cc)
ADD_EXECUTABLE(hellovmc llo.c mcjit.cc)

TARGET_LINK_DIRECTORIES(hellovm INTERFACE ${LLVM_LIBRARY_DIRS})
TARGET_LINK_DIRECTORIES(hellovmc INTERFACE ${LLVM_LIBRARY_DIRS})

TARGET_LINK_LIBRARIES(hellovm -lLLVM-${LLVM_VERSION_MAJOR})
TARGET_LINK_LIBRARIES(hellovmc -lLLVM-${LLVM_VERSION_MAJOR})

# llvm::orc::ExecutorProcessControl was introduced in LLVM 13.0.0
IF (NOT ${LLVM_PACKAGE_VERSION} VERSION_LESS "13.0.0")
  ADD_EXECUTABLE(hellorc llo-orc.cc)
  TARGET_LINK_DIRECTORIES(hellorc INTERFACE ${LLVM_LIBRARY_DIRS})
  TARGET_LINK_LIBRARIES(hellorc -lLLVM-${LLVM_VERSION_MAJOR})
  ADD_EXECUTABLE(hellorcc llo-orc.c)
  TARGET_LINK_DIRECTORIES(hellorcc INTERFACE ${LLVM_LIBRARY_DIRS})
  TARGET_LINK_LIBRARIES(hellorcc -lLLVM-${LLVM_VERSION_MAJOR})
ENDIF()
